# IslamQA

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  PERSONAL_README.md  PROGRESS.md  PROJECT_SUMMARY.md  README.md  SETUP_GUIDE_FREE.md  alembic.ini  config.env.template  docker-compose.yml  et --hard 8c8bb94  init.sql  local_setup.py  pyproject.toml  pytest.ini  render_daily_automation.py  requirements.txt  test_integration.py
.github/workflows/: automation.yml  ci.yml
app/: __init__.py  main.py  worker.py
app/api/v1/: __init__.py  router.py
app/api/v1/endpoints/: admin.py  ai_chat.py  analytics.py  auth.py  questions.py  search.py
app/automation/: github_automation.py
app/core/: config.py  database.py  database_sqlite.py  monitoring.py  rate_limiting.py  security.py
app/scrapers/: __init__.py  base_scraper.py  daralifta_scraper.py  islamqa_scraper.py
app/services/: __init__.py  hybrid_ai_service.py  knowledge_service.py  ml_service.py  simple_ai_service.py
app/tasks/: automation_tasks.py  maintenance_tasks.py  ml_tasks.py  scraping_tasks.py
app/websocket/: chat.py
data/: automation_heartbeat.txt  automation_lastrun.txt  automation_prayertimes.txt  automation_random.txt  automation_stats.json
frontend/: README.md  config.js  index.html  script.js  server.py  styles.css
migrations/: env.py
scripts/: setup.sh  start.bat  update_prayer_times.py
tests/: conftest.py  test_api.py
